Fix wrong selected page number alignment on pagination

--- a/app/Resources/static/themes/material/css/entries.scss
+++ b/app/Resources/static/themes/material/css/entries.scss
@@ -43,10 +43,12 @@
     padding: 0;
   }
 
+  span,
   a {
     padding: 0 10px;
     height: 30px;
     display: block;
+    line-height: 30px;
   }
 
   .disabled {
